<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/tablita"
        android:layout_width="376dp"
        android:layout_height="288dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/MC"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/Mmas"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMmenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/Mmenos"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/MR"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/limpiar"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnMasMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/masmenos"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/division"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/multiplicacion"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num7"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num8"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num9"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/resta"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num4"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num5"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num6"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/suma"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num1"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num2"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num3"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/igual"
            app:layout_column="3"
            app:layout_gravity="fill_vertical"
            app:layout_row="4"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/btnPunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/punto"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/num0"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            app:layout_row="5" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/txtEscribir"
        android:layout_width="367dp"
        android:layout_height="82dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:text="TextViewCentrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="367dp"
        android:layout_height="82dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="22dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEscribir" />
</androidx.constraintlayout.widget.ConstraintLayout>